--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	<script src="https://www.amcharts.com/lib/3/pie.js"></script>
 	<script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
 
+ <!-- md5 script -->
+	<script src="js/md5.min.js" type="text/javascript"></script>
+
  <!-- Reactive-->
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 	
