--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Infographer</title>
+	<title>Info Bits</title>
 
  <!-- Google Fonts: Raleway-->
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700italic,400italic' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
 <body>
 
 <nav>
-	<h1>Infographer</h1>
+	<h1>Info Bits</h1>
 	<ol>
 	<li><a class="link" href='#'>List</a></li>
 	<li><a class="link" href='#'>About</a></li>
@@ -50,17 +50,17 @@
 </header>
 
 <main>
-	<p>This site is used (or rather <i>going</i> to be used for) quickly viewing the content for some API information.</p>
+
+	<p>Enter in a search term and collect all the media information about it based of the open-source API's available.</p>
+
 
 
 	<form id='search-form'>
-		<input type="radio" value="marvel" name="api-option" > Marvel<br>
-		<input type="radio" value="nasa" name="api-option" >Nasa<br>
+		<input type="text" placeholder="Movie, comicbook, actor, etc." size="50"></input>
 		<input type="submit"> 
 	</form>
 
-
-	<div id="chartdiv"></div>
+<div id='results-index'></div>
 
 </main>
 
