--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Info Bits</title>
 
  <!-- Google Fonts: Raleway-->
-	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700italic,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700,900italic,400italic' rel='stylesheet' type='text/css'>
+
  <!-- Favicon -->
 	<link rel="shortcut icon" type="images/favicon.ico" href="images/favicon.ico">
  <!-- Your style-->
@@ -14,15 +15,22 @@
 	<link rel="stylesheet" type="text/css" href="js/jquery-ui-1.11.4.custom/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="js/jquery-ui-1.11.4.custom/jquery-ui.structure.css">
 	<link rel="stylesheet" type="text/css" href="js/jquery-ui-1.11.4.custom/jquery-ui.theme.css">
+ <!-- Flickcity style -->
+ 	<link rel="stylesheet" href="css/flickity.css" media="screen">
 	
  <!--jQuery min-->
-	<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
- <!-- App script-->
-	<script type="text/javascript" src="js/app.js"></script>
+	<script   src="http://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
+	  <!-- Flickcity script -->
+ 	<script src="js/flickity.pkgd.min.js"></script>
+ 	<script src="js/packery.pkgd.js"></script>
+
+
+
  <!-- UI script-->
 	<script src="js/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
 
  <!-- Pie Chart Scripts -->
+	
 	<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
 	<script src="https://www.amcharts.com/lib/3/pie.js"></script>
 	<script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
@@ -30,18 +38,26 @@
  <!-- md5 script -->
 	<script src="js/md5.min.js" type="text/javascript"></script>
 
- <!-- Reactive-->
+ <!-- Async script-->
+	<script type="text/javascript" src="js/async.js"></script>
+
+ <!--  MY App script-->
+	<script type="text/javascript" src="js/app.js"></script>
+
+ <!-- Reactive tag-->
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 	
  </head>
 <body>
 
+<h1 class="stay">Info Bits</h1>
 <nav>
 	<h1>Info Bits</h1>
+
 	<ol>
-	<li><a class="link" href='#'>List</a></li>
+	<!-- <li><a class="link" href='#'>List</a></li>
 	<li><a class="link" href='#'>About</a></li>
-	<li><a class="link" href='#'>Halp!</a></li>
+	<li><a class="link" href='#'>Halp!</a></li> -->
 	</ol>
 </nav>
 
@@ -51,7 +67,7 @@
 
 <main>
 
-	<p>Enter in a search term and collect all the media information about it based of the open-source API's available.</p>
+	<p>Enter a Marvel character's name and see the media information available through the Marvel, YouTube, and OMDB (resourced from IMDB) APIs.</p>
 
 
 
@@ -60,7 +76,14 @@
 		<input type="submit"> 
 	</form>
 
-<div id='results-index'></div>
+<div class="grid" data-packery='{ "itemSelector": ".grid-item", "gutter": 10 }'>
+
+	<div class=".grid-item" id="starting"></div>
+
+</div>
+
+	<div class="carousel-cell" id='results-index'></div>
+</div>
 
 </main>
 
