--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>2Info Bits</title>
+	<title>Info Bits</title>
 
  <!-- Google Fonts: Raleway-->
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700,900italic,400italic' rel='stylesheet' type='text/css'>
